SERVER-107397 Resharding donors should only abort unprepared transactions upon transitioning to the preparing-to-block-writes when feature flag is enabled (#38381)

GitOrigin-RevId: f398920c233338dda4d6701260737ff32ef6ddb1